...
  ConsumerState<SearchPage> createState() => _SearchPageState();
}

class _SearchPageState extends ConsumerState<SearchPage> {
  int _tabIndex = 0;
  String _filter = 'Perto de mim';
  final _tabs = ['Partidas', 'Times'];
  final _filters = ['Perto de mim', 'Hoje', 'Esta semana', 'Aberto'];
  final _searchController = TextEditingController();

  final _colors = [
    AppColors.avatarGreen,
    AppColors.avatarBlue,
    AppColors.avatarRed,
...
